--- a/escola/templates/formularios/tac_form.html
+++ b/escola/templates/formularios/tac_form.html
@@ -128,7 +128,7 @@
   const AUTOCOMPLETE_ALUNOS_URL = "/formularios/api/alunos_autocomplete";
 </script>
 
-<script src="{{ url_for('static', filename='js/registrar_rfo.js') }}"></script>
+<script src="{{ url_for('static', filename='js/registrar_tac.js') }}"></script>
 
 <script>
   function initAlunoSearch(inputEl, hiddenEl, infoEl){
@@ -295,31 +295,6 @@
       initEscolaSearch(escolaInput, cabecalhoHidden);
     }
   });
-</script>
-
-<script>
-document.addEventListener('DOMContentLoaded', function(){
-  const partesContainer = document.getElementById('participantes_container');
-  const btnAddParticipante = document.getElementById('btn-add-participante');
-  if (btnAddParticipante && partesContainer) {
-    btnAddParticipante.addEventListener('click', function(e){
-      e.preventDefault();
-      e.stopPropagation();
-      const row = document.createElement('div');
-      row.className = 'row mb-2 participante-row';
-      row.innerHTML = '<div class="col-md-6"><input type="text" name="participante_nome[]" class="form-control" value=""></div>' +
-        '<div class="col-md-5"><input type="text" name="participante_cargo[]" class="form-control" value=""></div>' +
-        '<div class="col-md-1"><button type="button" class="btn btn-outline-danger btn-remove-participante">X</button></div>';
-      partesContainer.appendChild(row);
-    });
-
-    partesContainer.addEventListener('click', function(e){
-      if (e.target && e.target.classList.contains('btn-remove-participante')){
-        e.target.closest('.participante-row').remove();
-      }
-    });
-  }
-});
 </script>
 
 {% endblock %}
